[package]
name = "arrow-format"
version = "0.1.0+1.0.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"
description = "Apache Arrow format types"
readme = "README.md"
repository = "https://github.com/mbrobbel/arrow-format"
documentation = "http://docs.rs/arrow-format/"
license = "Apache-2.0"
keywords = ["Arrow"]

[features]
default = ["arrow"]
arrow = ["file", "message", "schema", "sparse_tensor", "tensor"]
plasma = ["plasma_common", "plasma_"]
all = ["arrow", "plasma", "feather", "flight"]

file = ["fbs"]
message = ["fbs"]
schema = ["fbs"]
sparse_tensor = ["fbs"]
tensor = ["fbs"]
plasma_common = ["fbs"]
plasma_ = ["fbs"]
feather = ["fbs"]
flight = ["proto"]
fbs = ["flatbuffers", "flatc"]
proto = ["bytes", "prost", "prost-build"]

[dependencies]
flatbuffers = { version = "=2.0.0", optional = true }
bytes = { version = "1", optional = true }
prost = { version = "0.8", optional = true }

[build-dependencies]
flatc = { version = "=0.2.1+2.0.0", optional = true }
flate2 = "1.0"
prost-build = { version = "0.8", optional = true }
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
